--- a/package.json
+++ b/package.json
@@ -15,14 +15,12 @@
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-typescript": "^6.0.0",
     "@types/node": "^14.14.2",
-    "@types/pdfjs-dist": "^2.1.6",
     "obsidian": "https://github.com/obsidianmd/obsidian-api/tarball/master",
     "rollup": "^2.32.1",
     "tslib": "^2.0.3",
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "@popperjs/core": "^2.9.1",
-    "pdfjs-dist": "^2.5.207"
+    "@popperjs/core": "^2.9.1"
   }
 }
