--- a/package.json
+++ b/package.json
@@ -4,19 +4,16 @@
   "description": "This is a sample plugin for Obsidian (https://obsidian.md)",
   "main": "main.js",
   "scripts": {
-    "dev": "rollup --config rollup.config.js -w",
-    "build": "rollup --config rollup.config.js"
+    "dev": "node esbuild.config.mjs dev",
+    "build": "node esbuild.config.mjs production"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^15.1.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "@rollup/plugin-typescript": "^6.0.0",
     "@types/node": "^14.14.2",
     "obsidian": "^1.1.1",
-    "rollup": "^2.32.1",
+    "esbuild": "^0.19.2",
     "tslib": "^2.0.3",
     "typescript": "^4.0.3"
   },
